[tool.poetry]
name = "astro-forecast"
version = "0.1.0"
description = ""
authors = ["Narymm <narymm3190@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.0"
prompt = "^0.4.1"
pytest = "^8.3.2"
python-telegram-bot = {extras = ["job-queue"], version = "^21.5"}
gspread = "^6.1.2"
oauth2client = "^4.1.3"
pytelegrambotapi = "^4.22.1"
google-auth = "^2.34.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
